# zrb-ollama

./: .flake8  .gitignore  README.md  project.sh  pyproject.toml  requirements.txt  zrb_init.py
.github/workflows/: _zrb.yml
_cmd/: activate-venv.sh  build.sh  install-symlink.sh  prepare-playground.sh  prepare-venv.sh  publish.sh  test-playground.sh
example/: .gitignore  zrb_init.py  zrb_ollama_init.py
example/rag/document/: john-titor.md
example/sample-template/: iterative-fibo.js  recursive-fibo.js
playground-template/: fibo.py  requirements.txt  zrb_init.py
src/zrb_ollama/: __init__.py  __main__.py  builtin.py  config.py  group.py  system-prompt.txt
src/zrb_ollama/agent/: __init__.py  _helper.py  agent.py  helper.py
src/zrb_ollama/bedrock/: helper.py
src/zrb_ollama/builtin/: __init__.py  install.py
src/zrb_ollama/builtin/cmd/: install.sh
src/zrb_ollama/cmd/: install.sh
src/zrb_ollama/embedding/: helper.py
src/zrb_ollama/factory/: __init__.py  agent.py  agent_executor.py  agent_prompt_template.py  agent_tool.py  callback_handler.py  chat_model.py  prompt.py  schema.py
src/zrb_ollama/factory/helper/: python_repl.py
src/zrb_ollama/factory/llm/: __init__.py  bedrock.py  default.py  mistralai.py  ollama.py  openai.py
src/zrb_ollama/factory/prompt/: default.py  react-prompt.txt  react.py
src/zrb_ollama/factory/tool/: __init__.py  bash_repl.py  default.py  python_repl.py  rag.py  search.py
src/zrb_ollama/interactive/: __init__.py  conversation.py  load_module.py  tool.py
src/zrb_ollama/task/: __init__.py  any_prompt_task.py  langchain_task.py  llm_task.py  prompt_task.py
src/zrb_ollama/tools/: __init__.py  _helper.py  calculate.py  get_current_location.py  get_current_weather.py  git.py  open_web_page.py  query_internet.py  rag.py
