[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "zrb-ollama"
version = "0.0.16"
authors = [
  { name="goFrendiAsgard", email="gofrendiasgard@gmail.com" },
]
description = "Tasks related to ollama"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
]
dependencies = [
  "zrb>=0.4.0",
  "langchain~=0.1.0",
  "langchain-community~=0.0.9",
  "langchain-core~=0.1.7",
  "langchain-openai~=0.0.2",
  "openai~=1.6.1",
  "duckduckgo_search~=4.1.1",
  "boto3~=1.34.25",
]
 

[project.optional-dependencies]
dev = []
test = []

[project.urls]
"Homepage" = "https://github.com/gofrendiAsgard/zrb-ollama"
"Bug Tracker" = "https://github.com/gofrendiAsgard/zrb-ollama/issues"

[project.scripts]
zrb-ollama = "zrb_ollama.__main__:prompt"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
