[tool.poetry]
name = "zrb-ollama"
version = "0.0.20"
description = "Zrb LLM plugin"
authors = ["Go Frendi <gofrendiasgard@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/goFrendiAsgard/zrb-ollama"
repository = "https://github.com/goFrendiAsgard/zrb-ollama"
documentation = "https://github.com/goFrendiAsgard/zrb-ollama"
keywords = []

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0.0"
zrb = ">=0.4.0"
langchain = "~0.1.11"
langchain-community = "~0.0.26"
langchain-core = "~0.1.29"
requests = "~2.31.0"
beautifulsoup4 = "~4.12.3"
readability-lxml = "~0.8.1"
langchain-openai = {version = "~0.0.7", optional = true}
openai = {version = "~1.10.0", optional = true}
langchain-mistralai = {version = "~0.0.4", optional = true}
mistralai = {version = "~0.0.11", optional = true}
boto3 = {version = "~1.34.25", optional = true}
faiss-cpu = {version = "~1.7.4", optional = true}
faiss-gpu = {version = "~1.7.2", optional = true}
tiktoken = {version = "~0.5.2", optional = true}

[tool.poetry.extras]
openai = ["langchain-openai", "openai"]
mistralai = ["langchain-mistralai", "mistralai"]
bedrock = ["boto3"]
embedding-cpu = ["faiss-cpu", "tiktoken"]
embedding-gpu = ["faiss-gpu", "tiktoken"]


[tool.poetry.dev-dependencies]
flake8 = "~6.0.0"
black = "~23.12.1"
isort = "~5.13.2"
pytest = "~7.4.0"
pytest-cov = "~4.1.0"
pytest-asyncio = "~0.21.0"
flameprof = "~0.4"

[tool.poetry.scripts]
zrb-ollama = "zrb_ollama.__main__:prompt"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
