[tool.poetry]
name = "zrb-ollama"
version = "0.2.14"
description = "Zrb LLM plugin"
authors = ["Go Frendi <gofrendiasgard@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/state-alchemists/zrb-ollama"
repository = "https://github.com/state-alchemists/zrb-ollama"
documentation = "https://github.com/state-alchemists/zrb-ollama"
keywords = ["Ollama", "OpenAI", "Bedrock", "AI Agent", "LLM"]
exclude = ["example"]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0.0"
zrb = ">=0.25.0"
beautifulsoup4 = "~=4.12.3"
litellm = "~=1.44.8"
requests = "~2.31.0"
boto3 = {version = "~1.34.140", optional = true}
chromadb= {version = "~0.5.3", optional = true}
pdfplumber = {version = "^0.11.3", optional = true}
json-repair = "^0.28.4"

[tool.poetry.extras]
# poetry install -E aws -E rag
aws = ["boto3"]
rag = ["chromadb", "pdfplumber"]


[tool.poetry.dev-dependencies]
flake8 = "~6.0.0"
black = "~23.12.1"
isort = "~5.13.2"
pytest = "~7.4.0"
pytest-cov = "~4.1.0"
pytest-asyncio = "~0.21.0"
flameprof = "~0.4"

[tool.poetry.scripts]
zrb-ollama = "zrb_ollama.__main__:prompt"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
